--- a/config.json
+++ b/config.json
@@ -4,17 +4,32 @@
 		{
 			"alt" : "Github",
 			"icon" : "fab fa-github",
-			"link" : "https://github.com/kutyla-philipp"
+			"link" : "https://github.com/akshaysth"
 		},
 		{
 			"alt" : "Twitter",
 			"icon" : "fab fa-twitter",
-			"link" : "https://twitter.com/Kukielka_"
+			"link" : "https://tweetdeck.twitter.com"
+		},
+		{
+			"alt" : "Reddit",
+			"icon" : "fab fa-reddit-alien",
+			"link" : "https://reddit.com"
+		},
+		{
+			"alt" : "HackTheBox",
+			"icon" : "fas fa-cube",
+			"link" : "https://app.hackthebox.com"
+		},
+		{
+			"alt" : "LinkedIn",
+			"icon" : "fab fa-linkedin-in",
+			"link" : "https://linkedin.com"
 		},
 		{
 			"alt" : "Docker Hub",
 			"icon" : "fab fa-docker",
-			"link" : "https://hub.docker.com/u/kukielka/"
+			"link" : "https://hub.docker.com/u/ac3t0pgun"
 		}
 	]
 }
